2013-04-04  Andy Buckley  <andy.buckley@cern.ch>

	* Re-enabling the -Wno-long-long flag if possible, to avoid build
	warnings stemming from yaml-cpp.

2013-04-03  Andy Buckley  <andy.buckley@cern.ch>

	* migration/: Many updates to comparison scripts, and adding a
	plotv5v6 script and new README instructions.

	* migration/: Combined dumpv5.cc and dumpv6.cc into a single
	dumpv5v6.cc, with the version selected by a preprocessor macro.

2013-04-02  Andy Buckley  <andy.buckley@cern.ch>

	* Build system fixes... *finally* working on lxplus! :-)

2013-03-25  Andy Buckley  <andy.buckley@cern.ch>

	* Re-wrangling dump, comparison, and migration scripts.

	* Fixing accidental shift of LHAGlue default member from 0 ->
	1. The default index = 1 should only apply to the multiset index
	used by non-multiset functions.

2013-03-24  Andy Buckley  <andy.buckley@cern.ch>

	* Removing uses of Boost range algorithms -- nice, but apparently
	introduces a bit too much sensitivity on Boost version for some
	Mac and SL systems.

	* Adding a NotImplementedError!

	* Adding main PDFLIB functions as implemented in PYTHIA6's pdfdummies.f.

2013-03-23  Andy Buckley  <andy.buckley@cern.ch>

	* Adding non-multiset versions of LHAGlue.cc functions.

	* Use 1 rather than 0 as the lowest (and default) multi-set index
	in LHAGlue.cc.

2013-03-15  Andy Buckley  <andy.buckley@cern.ch>

	* Using much cleverer Boost discovery macros (with a slight fix)
	from https://github.com/tsuna/boost.m4. Need to feed back the
	fix...

	* Adding --with-boost-lib, --with-boost-inc, and
	--with-yaml-cpp-lib, --with-yaml-cpp-inc configure flags,
	particularly for use on systems where Boost's install is a bit
	borked and there is no common prefix dir for which $prefix/lib and
	$prefix/include are valid dirs.

2013-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Convert LHAGlue.cc to load the 0th member on set initialisation,
	plus some other tweaks (this matches the v5 behaviour _and_ makes