@@ -39,8 +39,8 @@ The following commands (run in a subdir containing the dumped sample point
 files) are useful for batch running of the comparisons across all standard PID
 codes and for the available "discrete" x and Q values:
 
-for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do for x in 1e-08 1e-06 0.0001 0.01 0.1 0.2 0.5 0.8; do ../cmpv5v6 xf_v{5,6}_scanq_x${x}_${pid}.dat && mv accuracy{,_x${x}_${pid}}.dat; done; done
-for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do for q in 10 50 100 200 500 1000 2000 5000; do ../cmpv5v6 xf_v{5,6}_scanx_q${q}_${pid}.dat && mv accuracy{,_q${q}_${pid}}.dat; done; done
+for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do for x in 1e-08 1e-06 0.0001 0.01 0.1 0.2 0.5 0.8; do ../cmpv5v6 xf_v*_scanq_x${x}_${pid}.dat -o xfacc_x${x}_${pid}.dat; done; done
+for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do for q in 10 50 100 200 500 1000 2000 5000; do ../cmpv5v6 xf_v*_scanx_q${q}_${pid}.dat -o xfacc_q${q}_${pid}.dat; done; done
 
 The plotv5v6 script is useful for 1D comparison plotting of data files, either
 absolute PDF xf values or fractional deviations and with either x or Q on the
@@ -49,9 +49,9 @@ usefully used for batch plotting of PDF values or accuracies as follows, again
 run in a subdir in this example:
 
 ## Plotting absolute PDF values (from the output of dumpv5v6) for all PIDs:
-for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 xf_v*_scanq_x*_$pid.dat --type=xf --axis=q -o cmpv5v6_xf_qscan_$pid.pdf; done
-for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 xf_v*_scanx_q*_$pid.dat --type=xf --axis=x -o cmpv5v6_xf_xscan_$pid.pdf; done
+for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 xf_v*_scanx_q*_$pid.dat --type=xf --axis=x -o cmpv5v6_xf_scanx_$pid.pdf; done
+for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 xf_v*_scanq_x*_$pid.dat --type=xf --axis=q -o cmpv5v6_xf_scanq_$pid.pdf; done
 
 ## Plotting differences (from the output of cmpv5v6) for all PIDs:
-for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 accuracy_q*_$pid.dat --axis=x -o cmpv5v6_accuracy_xscan_$pid.pdf; done
-for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 accuracy_x*_$pid.dat --axis=q -o cmpv5v6_accuracy_qscan_$pid.pdf; done
+for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 xfacc_q*_$pid.dat --axis=x -o cmpv5v6_xfacc_scanx_$pid.pdf; done
+for pid in -5 -4 -3 -2 -1 1 2 3 4 5 21; do ../plotv5v6 xfacc_x*_$pid.dat --axis=q -o cmpv5v6_xfacc_scanq_$pid.pdf; done
